Fixed BG blur on the teamScrean component. and fixed bubbling. andmade it so that when you click on the card it does not close the module or on the team screan. It will only close if yoyu click on the blurred backround(ParentMod or BGblur) Thank you for reading this helped me a lot.

--- a/react-bacics/src/App.css
+++ b/react-bacics/src/App.css
@@ -46,6 +46,15 @@
   position: fixed;
   backdrop-filter: blur(8px);
 }
+.bgBlur{
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  backdrop-filter: blur(8px);
+}
 .mod{
   color: white;
   position: fixed;
@@ -101,6 +110,7 @@
   align-items: center;
   text-align: center;
   font-size: 250%;
+  z-index: 3;
 }
 .App-header {
   background-color: #282c34;
